# acme-bot

./: .flake8  .gitignore  .pylintrc  Dockerfile  Pipfile  README.md  commit_info.py  docker-entrypoint.sh  flake.nix  main.py  music.py  pyproject.toml  requirements.txt  setup.py  shell.nix  shell.py
.github/: dependabot.yml
.github/workflows/: docker_build.yml  release.yml  release_minor.yml  release_patch.yml  wheel_build.yml
acme_bot/: __init__.py  autoloader.py  convutils.py  external_control.py  liveprobe.py  shell.py  textutils.py  utils.py  version_info.py
acme_bot/config/: __init__.py  default.conf  properties.py
acme_bot/music/: __init__.py  downloader.py  extractor.py  player.py  queue.py  schema.py  ui.py
acme_bot/music/search/: 0001_init.sql  __init__.py
acme_bot/remote_control/: __init__.py  rmq.py  schema.py
acme_bot/shell/: __init__.py  grammar.tx  interpreter.py
acme_bot/version_info/: __init__.py
docs/: command_docs.py  commands.md  remote_api.json  shell_syntax.md
music/: __init__.py  downloader.py  player.py  queue.py
test/: conftest.py  discord_context.py  test_config.py  test_music.py  test_music_extractor.py  test_music_player.py  test_music_queue.py  test_music_search.py  test_music_ui.py  test_remote_control.py  test_remote_control_rmq.py  test_shell.py  test_shell_interpreter.py  test_textutils.py
test/data/: test.conf
