[tool.poetry]
name = "acme-bot"
version = "1.0.0-dev"
description = "Discord music bot with a custom shell language"
license = "AGPL-3.0-or-later"
authors = ["kmolski <krzysztof.molski29@gmail.com>"]
repository = "https://github.com/kmolski/acme-bot"

include = ["acme_bot/version_info/commit.txt"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aio-pika = "^9.4.2"
"discord.py" = {version = "^2.4.0", extras = ["voice"]}
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
textX = "^4.0.1"
wavelink = "^3.4.1"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
flake8 = "^7.1.0"
pylint = "^3.2.6"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.8"

[tool.poetry.scripts]
acme-bot = "acme_bot:run"

[tool.poetry-dynamic-versioning]
enable = true
format-jinja-imports = [{module = "datetime", item = "datetime"}]

[tool.poetry-dynamic-versioning.files."acme_bot/version_info/commit.txt"]
persistent-substitution = true
initial-content-jinja = "{{commit}} {{datetime.strptime(timestamp, '%Y%m%d%H%M%S').strftime('%Y-%m-%d')}}"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
