[project]
name = "acme-bot"
description = "Discord music bot with a custom shell language"
authors = [{name="kmolski", email = "krzysztof.molski29@gmail.com"}]
license = "AGPL-3.0-or-later"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.12,<3.14"
dependencies = [
  "aio-pika (>=9.5.5,<10.0.0)",
  "discord.py (>=2.5.2,<3.0.0)",
  "lavalink (>=5.9.0,<6.0.0)",
  "pydantic (>=2.11.5,<3.0.0)",
  "python-dotenv (>=1.1.0,<2.0.0)",
  "textX (>=4.2.2,<5.0.0)",
]

[project.urls]
repository = "https://github.com/kmolski/acme-bot"

[project.scripts]
acme-bot = "acme_bot:run"

[tool.poetry]
version = "2.0.0-dev"
include = [{path = "acme_bot/version_info/commit.txt", format = ["sdist", "wheel"]}]

[tool.poetry.group.dev.dependencies]
black = "25.9.0"
flake8 = "^7.3.0"
pylint = "^3.3.8"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = {version = ">=1.0.0,<2.0.0", extras = ["plugin"]}

[tool.poetry-dynamic-versioning]
enable = true
format-jinja-imports = [{module = "datetime", item = "datetime"}]

[tool.poetry-dynamic-versioning.files."acme_bot/version_info/commit.txt"]
persistent-substitution = true
initial-content-jinja = "{{commit}} {{datetime.strptime(timestamp, '%Y%m%d%H%M%S').strftime('%Y-%m-%d')}}"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
