[project]
name = "acme-bot"
description = "Discord music bot with a custom shell language"
authors = [{name="kmolski", email = "krzysztof.molski29@gmail.com"}]
license = "AGPL-3.0-or-later"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.13,<3.15"
dependencies = [
  "aio-pika (>=9.5.7,<10.0.0)",
  "aiohttp (>=3.13.1,<4.0.0)",
  "discord.py (>=2.6.4,<3.0.0)",
  "lavalink (>=5.9.0,<6.0.0)",
  "pydantic (>=2.12.3,<3.0.0)",
  "python-dotenv (>=1.1.1,<2.0.0)",
  "textX (>=4.2.3,<5.0.0)",
]

[project.urls]
repository = "https://github.com/kmolski/acme-bot"

[project.scripts]
acme-bot = "acme_bot:run"

[tool.poetry]
version = "2.0-dev"
include = [{path = "acme_bot/version_info/commit.txt", format = ["sdist", "wheel"]}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.6"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pytest-aiohttp = "^1.1.0"
pytest-asyncio = "^1.2.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = {version = ">=1.0.0,<2.0.0", extras = ["plugin"]}

[tool.poetry-dynamic-versioning]
enable = true
format-jinja-imports = [{module = "datetime", item = "datetime"}]

[tool.poetry-dynamic-versioning.files."acme_bot/version_info/commit.txt"]
persistent-substitution = true
initial-content-jinja = "{{commit}} {{datetime.strptime(timestamp, '%Y%m%d%H%M%S').strftime('%Y-%m-%d')}}"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
